# comprehensive-rust

./: .gitignore  Cargo.toml  book.toml
mdbook-keeper-deps/: Cargo.toml
src/android/interoperability/with-c/: rust.md
src/async/: async-await.md  futures.md
src/bare-metal/aps/: uart.md
src/basic-syntax/: rustdoc.md
src/error-handling/: deriving-error-enums.md  dynamic-errors.md  error-contexts.md  panic-unwind.md
src/exercises/: Cargo.toml
src/exercises/bare-metal/: solutions-afternoon.md
src/exercises/day-1/: for-loops.md  iterators-and-ownership.md
src/exercises/day-2/: strings-iterators.md
src/modules/: paths.md
src/structs/: field-shorthand.md
src/testing/: doc-tests.md
src/unsafe/: unsafe-traits.md
