[workspace]
members = [
  "mdbook-exerciser",
  "src/exercises",
  "src/bare-metal/useful-crates/allocator-example",
  "src/bare-metal/useful-crates/zerocopy-example",
  "src/exercises/concurrency/chat-async",
]

[package]
name = "comprehensive-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3.28"
thiserror = "1.0"
